# governai-ui

./: .gitignore  Makefile  README.md  install.sh
.github/homebrew/: governai-ui.rb.tmpl
.github/workflows/: release.yml
Formula/: governai-ui.rb
backend/: README.md  pyproject.toml
backend/app/: __init__.py  api.py  catalog.py  drafts.py  execution.py  llm.py  main.py  models.py  planner.py  services.py  settings.py
backend/app/cli/: __init__.py  api_client.py  keyring_store.py  main.py  process_manager.py  profiles.py  tui.py
backend/tests/: test_api_integration.py  test_cli_keyring.py  test_cli_process_manager.py  test_cli_profiles.py  test_cli_tui.py  test_drafts.py  test_llm.py  test_planner.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.test.tsx  App.tsx
frontend/src/lib/: api.ts
frontend/src/styles/: app.css
scripts/: release.sh  update_formula.sh
