[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "governai-ui"
version = "0.1.0"
description = "GovernAI workflow builder with OpenClaw-style CLI/TUI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.4",
  "python-dotenv>=1.0",
  "httpx>=0.27",
  "litellm>=1.50",
  "redis>=5.0",
  "rich>=13.7",
  "textual>=0.86",
  "keyring>=25.4",
  "governai>=0.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["app*"]

[project.scripts]
governai-ui = "app.cli.main:main"
